src/ui/snapshots/kvn_tui__ui__layout__tests__overlays_render_at_the_minimum_terminal_size@dns-settings.snap
---
source: src/ui/layout.rs
expression: "snapshot_terminal(&model, MIN_TERMINAL_WIDTH, MIN_TERMINAL_HEIGHT)"
---
┌ Traffic ───────────────────────────────────────────────────────────┐
│ ↑ 0.0 KB/s  ↓ 0.0 KB/s    Total: ↑ 0.0 KB  ↓ 0.0 KB    0 connectio │
└────────────────────────────────────────────────────────────────────┘
┌ Profiles ───────┌───────────────────────────────┐──────────────────┐
│ └ Alpha         │        Settings › DNS         │less  1.1.1.1:443 │
│                 │                               │                  │
│                 │ Preset   ‹ Cloudflare DoH ›   │                  │
│                 │ Strategy ‹ Prefer IPv4 ›      │                  │
│                 │ Fake-IP  ‹ off ›              │                  │
│                 │                               │                  │
│                 │      󰌑 apply · q/󱊷 close      │                  │
│                 └───────────────────────────────┘                  │
│                                                                    │
└────────────────────────────────────────────────────────────────────┘
 DISCONNECTED                                              DoH  Global
[70x15]
