src/ui/snapshots/kvn_tui__ui__layout__tests__overlays_render_at_the_minimum_terminal_size@migration.snap
---
source: src/ui/layout.rs
expression: "snapshot_terminal(&model, MIN_TERMINAL_WIDTH, MIN_TERMINAL_HEIGHT)"
---
┌ Traffic ───────────────────────────────────────────────────────────┐
│ ↑ 0.0 KB/┌──────────────────────────────────────────────┐connectio │
└──────────│               Migration failed               │──────────┘
┌ Profiles │                                              │──────────┐
│ └ Alpha  │             Updating integration             │1.1.1:443 │
│          │  Migration continues after closing the TUI.  │          │
│          │                  Step 2 of 4                 │          │
│          │                                              │          │
│          │              sudo command failed             │          │
│          │   Run `kvn migrate` in a terminal to retry.  │          │
│          │                                              │          │
│          │                   q/󱊷 close                  │          │
│          └──────────────────────────────────────────────┘          │
└────────────────────────────────────────────────────────────────────┘
 DISCONNECTED                                              DoH  Global
[70x15]
